--- a/app/src/main/res/layout/investor_info_layout.xml
+++ b/app/src/main/res/layout/investor_info_layout.xml
@@ -27,66 +27,69 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/logo"
-            android:layout_width="102dp"
-            android:layout_height="98dp"
-            app:srcCompat="@mipmap/ic_launcher" />
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/logo"
+                    android:layout_width="102dp"
+                    android:layout_height="98dp"
+                    app:srcCompat="@mipmap/ic_launcher" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/category"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="TextView"
+                        android:textSize="36sp" />
+
+                    <TextView
+                        android:id="@+id/rate"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="TextView"
+                        android:textSize="36sp" />
+                </LinearLayout>
+
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/category"
+                android:id="@+id/description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TextView"
                 android:textSize="36sp" />
 
             <TextView
-                android:id="@+id/rate"
+                android:id="@+id/budget"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView"
                 android:textSize="36sp" />
+
+            <ListView
+                android:id="@+id/invest"
+                android:layout_width="wrap_content"
+                android:layout_height="422dp">
+
+            </ListView>
+
         </LinearLayout>
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textSize="36sp" />
-
-    <TextView
-        android:id="@+id/budget"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textSize="36sp" />
-
-    <ListView
-        android:id="@+id/invest"
-        android:layout_width="wrap_content"
-        android:layout_height="422dp">
-
-    </ListView>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:clickable="true"
-        app:srcCompat="@mipmap/ic_launcher" />
+    </ScrollView>
 
 </LinearLayout>
