--- a/app/src/main/res/layout/activity_register_ip.xml
+++ b/app/src/main/res/layout/activity_register_ip.xml
@@ -56,6 +56,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/user_inn"
                     android:hint="ИНН" />
 
                 <LinearLayout
@@ -71,6 +72,7 @@
                         android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:id="@+id/user_birthday"
                         android:hint="Дата рождения" />
 
                     <EditText
@@ -78,6 +80,7 @@
                         android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:id="@+id/user_birthday_place"
                         android:hint="Место рождения" />
 
                 </LinearLayout>
@@ -89,6 +92,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/user_citizenship"
                     android:hint="Гражданство (1 - РФ, 2 - иностранец, 3 - нет)" />
 
                 <LinearLayout
@@ -104,6 +108,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:id="@+id/user_country_code"
                         android:hint="Код страны" />
 
                     <EditText
@@ -111,6 +116,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:id="@+id/user_index"
                         android:hint="Почтовый индекс" />
 
                 </LinearLayout>
@@ -122,6 +128,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/user_subject"
                     android:hint="Субъект РФ" />
 
                 <EditText
@@ -131,6 +138,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/user_area_name"
                     android:hint="Наименование района" />
 
                 <EditText
@@ -140,6 +148,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/user_type_city"
                     android:hint="Тип населенного пункта" />
 
                 <EditText
@@ -149,6 +158,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/user_city_name"
                     android:hint="Наименование населенного пункта" />
 
                 <EditText
@@ -158,6 +168,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/user_street"
                     android:hint="Улица" />
 
                 <LinearLayout
@@ -173,6 +184,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:id="@+id/user_house"
                         android:hint="Дом" />
 
                     <EditText
@@ -180,6 +192,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:id="@+id/user_block"
                         android:hint="Корпус" />
 
                     <EditText
@@ -187,6 +200,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:id="@+id/user_app"
                         android:hint="Квартира" />
 
                 </LinearLayout>
@@ -198,6 +212,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/user_type_doc"
                     android:hint="Тип документа" />
 
                 <EditText
@@ -207,6 +222,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/user_number_doc"
                     android:hint="Серия и номер документа" />
 
                 <EditText
@@ -216,6 +232,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/user_date_doc"
                     android:hint="Дата выдачи" />
 
                 <EditText
@@ -226,6 +243,7 @@
                     android:layout_width="match_parent"
                     android:lines="3"
                     android:layout_height="wrap_content"
+                    android:id="@+id/user_who_doc"
                     android:hint="Кем выдан" />
 
             </LinearLayout>
