--- a/app/src/main/res/layout/info_project_layout.xml
+++ b/app/src/main/res/layout/info_project_layout.xml
@@ -38,7 +38,7 @@
             android:layout_height="150dp"
             android:layout_gravity="center_horizontal"
             android:layout_margin="16dp"
-            app:srcCompat="@mipmap/ic_launcher" />
+            app:srcCompat="@mipmap/icon_launcher" />
 
         <TextView
             android:id="@+id/category"
