--- a/app/src/main/res/layout/investor_info_layout.xml
+++ b/app/src/main/res/layout/investor_info_layout.xml
@@ -45,7 +45,7 @@
                     android:id="@+id/logo"
                     android:layout_width="102dp"
                     android:layout_height="98dp"
-                    app:srcCompat="@mipmap/ic_launcher" />
+                    app:srcCompat="@mipmap/icon_launcher" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
