--- a/app/src/main/res/layout/project_item.xml
+++ b/app/src/main/res/layout/project_item.xml
@@ -29,7 +29,7 @@
                         android:layout_width="80dp"
                         android:layout_height="80dp"
                         android:layout_margin="16dp"
-                        android:src="@mipmap/ic_launcher_round" />
+                        android:src="@mipmap/icon_launcher" />
 
                     <LinearLayout
                         android:layout_margin="16dp"
