--- a/app/src/main/res/layout/investor_info_layout.xml
+++ b/app/src/main/res/layout/investor_info_layout.xml
@@ -84,8 +84,8 @@
 
             <ListView
                 android:id="@+id/invest"
-                android:layout_width="wrap_content"
-                android:layout_height="422dp">
+                android:layout_width="match_parent"
+                android:layout_height="475dp">
 
             </ListView>
 
