--- a/app/src/main/res/layout/activity_register_ip.xml
+++ b/app/src/main/res/layout/activity_register_ip.xml
@@ -261,6 +261,6 @@
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:clickable="true"
-        android:src="@drawable/plus_icon" />
+        android:src="@drawable/ok_icon" />
 
 </RelativeLayout>
