--- a/app/src/main/res/layout/info_project_layout.xml
+++ b/app/src/main/res/layout/info_project_layout.xml
@@ -57,6 +57,16 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginEnd="5dp"
+                        android:textColor="#000000"
+                        android:textSize="25sp"
+                        android:text="Название" />
+
+                    <TextView
                         android:id="@+id/category"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
