--- a/app/src/main/res/layout/investor_info_layout.xml
+++ b/app/src/main/res/layout/investor_info_layout.xml
@@ -52,6 +52,14 @@
                 android:layout_margin="5dp">
 
                 <TextView
+                    android:id="@+id/name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="25sp"
+                    android:textColor="#000"
+                    android:text="TextView" />
+
+                <TextView
                     android:id="@+id/category"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
